fixed text stretching for line title card transitions

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -29,6 +29,8 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    position: absolute;
+    top: calc(2em + $spacing-6);
   }
 
   &-heading {
@@ -39,7 +41,8 @@
     font-size: $font-size-5;
     color: $white;
     margin-top: 1em;
-    margin-bottom: $spacing-6;
+    position: absolute;
+    top: 0;
   }
 
   &-designers {
