--- a/src/routes/lines/index.scss
+++ b/src/routes/lines/index.scss
@@ -41,6 +41,9 @@
     list-style-type: none;
     color: $white;
     font-size: $font-size-5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &-item {
